[gd_scene load_steps=75 format=3 uid="uid://cqfp2qnbf77uo"]

[ext_resource type="Script" uid="uid://cdhie130hallh" path="res://scripts/Hikiko.gd" id="1_gd2f4"]
[ext_resource type="Texture2D" uid="uid://b6fun7fa1yfap" path="res://assets/player/$HIKIKO_DREAMWORLD_SPRITESHEET.png" id="1_lta8j"]
[ext_resource type="PackedScene" uid="uid://bg57lo6lpgnla" path="res://scenes/ThrowableObject.tscn" id="2_4h0jv"]
[ext_resource type="SpriteFrames" uid="uid://6kuf3084w7ca" path="res://assets/styles/Emotions_sprites.tres" id="2_dyu8h"]
[ext_resource type="Texture2D" uid="uid://c6b0fo025qo7o" path="res://assets/player/$ACTION_HIKIKO_THROW.png" id="4_nrptt"]
[ext_resource type="Texture2D" uid="uid://cbl7m6fff70ir" path="res://assets/player/$ACTION_HIKIKO_THROW_UP_DOWN.png" id="5_5s4ot"]
[ext_resource type="Texture2D" uid="uid://43r077klkxup" path="res://assets/player/$ACTION_HIKIKO_SMASH_DOWN.png" id="5_16tth"]
[ext_resource type="AudioStream" uid="uid://cercb6yoe8ts1" path="res://music/sfx/BA_hammer_smash.ogg" id="9_0uh1f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gd2f4"]
size = Vector2(16, 23)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmch0"]
atlas = ExtResource("1_lta8j")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvnb6"]
atlas = ExtResource("1_lta8j")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7bda"]
atlas = ExtResource("1_lta8j")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_awlkf"]
atlas = ExtResource("1_lta8j")
region = Rect2(128, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vrewx"]
atlas = ExtResource("1_lta8j")
region = Rect2(192, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyu8h"]
atlas = ExtResource("1_lta8j")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_lta8j"]
atlas = ExtResource("1_lta8j")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gd2f4"]
atlas = ExtResource("1_lta8j")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sqqnw"]
atlas = ExtResource("1_lta8j")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrptt"]
atlas = ExtResource("1_lta8j")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4h0jv"]
atlas = ExtResource("1_lta8j")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5s4ot"]
atlas = ExtResource("1_lta8j")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7s28n"]
atlas = ExtResource("1_lta8j")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5edv3"]
atlas = ExtResource("1_lta8j")
region = Rect2(64, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xxqm"]
atlas = ExtResource("1_lta8j")
region = Rect2(256, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_16tth"]
atlas = ExtResource("1_lta8j")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0uh1f"]
atlas = ExtResource("1_lta8j")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8vqv3"]
atlas = ExtResource("1_lta8j")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_67vm4"]
atlas = ExtResource("1_lta8j")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4phf6"]
atlas = ExtResource("1_lta8j")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mbgae"]
atlas = ExtResource("1_lta8j")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcly3"]
atlas = ExtResource("1_lta8j")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0s3va"]
atlas = ExtResource("5_16tth")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pjjy"]
atlas = ExtResource("5_16tth")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7kki"]
atlas = ExtResource("5_16tth")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3kdr"]
atlas = ExtResource("5_16tth")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aci67"]
atlas = ExtResource("5_16tth")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s8vai"]
atlas = ExtResource("5_16tth")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jttk"]
atlas = ExtResource("5_16tth")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_suv4g"]
atlas = ExtResource("5_16tth")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8nmp"]
atlas = ExtResource("5_16tth")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7jtj"]
atlas = ExtResource("5_16tth")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u67yn"]
atlas = ExtResource("5_16tth")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_apmxi"]
atlas = ExtResource("5_16tth")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ge70h"]
atlas = ExtResource("1_lta8j")
region = Rect2(0, 192, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvx2o"]
atlas = ExtResource("1_lta8j")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_odaiu"]
atlas = ExtResource("5_5s4ot")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pu74o"]
atlas = ExtResource("5_5s4ot")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d7dxe"]
atlas = ExtResource("5_5s4ot")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygiww"]
atlas = ExtResource("5_5s4ot")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p4fxw"]
atlas = ExtResource("5_5s4ot")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ljpn"]
atlas = ExtResource("5_5s4ot")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2n7p"]
atlas = ExtResource("4_nrptt")
region = Rect2(0, 0, 64, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxdt4"]
atlas = ExtResource("4_nrptt")
region = Rect2(64, 0, 64, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_vmyyt"]
atlas = ExtResource("4_nrptt")
region = Rect2(128, 0, 64, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyv6v"]
atlas = ExtResource("4_nrptt")
region = Rect2(0, 63, 64, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6fh5"]
atlas = ExtResource("4_nrptt")
region = Rect2(64, 63, 64, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_ketwu"]
atlas = ExtResource("4_nrptt")
region = Rect2(128, 63, 64, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2ya0"]
atlas = ExtResource("4_nrptt")
region = Rect2(128, 126, 64, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4ggx"]
atlas = ExtResource("4_nrptt")
region = Rect2(64, 126, 64, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_q25qo"]
atlas = ExtResource("4_nrptt")
region = Rect2(0, 126, 64, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4gno"]
atlas = ExtResource("4_nrptt")
region = Rect2(128, 189, 64, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_b48c7"]
atlas = ExtResource("4_nrptt")
region = Rect2(64, 189, 64, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_pax2r"]
atlas = ExtResource("4_nrptt")
region = Rect2(0, 189, 64, 63)

[sub_resource type="AtlasTexture" id="AtlasTexture_74umv"]
atlas = ExtResource("1_lta8j")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqc26"]
atlas = ExtResource("5_5s4ot")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_55waf"]
atlas = ExtResource("5_5s4ot")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6asyt"]
atlas = ExtResource("5_5s4ot")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_yn8sl"]
atlas = ExtResource("5_5s4ot")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_wteak"]
atlas = ExtResource("5_5s4ot")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnoeo"]
atlas = ExtResource("5_5s4ot")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv5o0"]
atlas = ExtResource("1_lta8j")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_f5f5w"]
atlas = ExtResource("1_lta8j")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i32l8"]
atlas = ExtResource("1_lta8j")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_gd2f4"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmch0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvnb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7bda")
}],
"loop": true,
"name": &"down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_awlkf")
}],
"loop": true,
"name": &"fell",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vrewx")
}],
"loop": true,
"name": &"fell_cry",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyu8h")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lta8j")
}],
"loop": true,
"name": &"idle_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gd2f4")
}],
"loop": true,
"name": &"idle_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sqqnw")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrptt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4h0jv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5s4ot")
}],
"loop": true,
"name": &"left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7s28n")
}],
"loop": true,
"name": &"look_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5edv3")
}],
"loop": true,
"name": &"rest_front",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xxqm")
}],
"loop": true,
"name": &"rest_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_16tth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0uh1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8vqv3")
}],
"loop": true,
"name": &"right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_67vm4")
}],
"loop": true,
"name": &"shock_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4phf6")
}],
"loop": true,
"name": &"sit_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mbgae")
}],
"loop": true,
"name": &"sit_down_look",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcly3")
}],
"loop": true,
"name": &"sit_down_rest",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0s3va")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pjjy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7kki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3kdr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aci67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s8vai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jttk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_suv4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8nmp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7jtj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u67yn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apmxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apmxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apmxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apmxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apmxi")
}],
"loop": false,
"name": &"smash_down_action",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ge70h")
}],
"loop": true,
"name": &"smile_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvx2o")
}],
"loop": true,
"name": &"surprise_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_odaiu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pu74o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d7dxe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygiww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p4fxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ljpn")
}],
"loop": false,
"name": &"throw_down_action",
"speed": 17.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2n7p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxdt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmyyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyv6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6fh5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ketwu")
}],
"loop": false,
"name": &"throw_left_action",
"speed": 17.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2ya0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4ggx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q25qo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4gno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b48c7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pax2r")
}],
"loop": false,
"name": &"throw_right_action",
"speed": 17.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_74umv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqc26")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55waf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6asyt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yn8sl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wteak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnoeo")
}],
"loop": false,
"name": &"throw_up_action",
"speed": 17.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv5o0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f5f5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i32l8")
}],
"loop": true,
"name": &"up",
"speed": 6.0
}]

[node name="Hikiko" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_gd2f4")
smash_shake_intensity = 30.0
smash_shake_duration = 0.6
throwable_scene = ExtResource("2_4h0jv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_gd2f4")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_gd2f4")
animation = &"smash_down_action"
frame_progress = 1.0

[node name="Emotions" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -29)
sprite_frames = ExtResource("2_dyu8h")
animation = &"sing_bubble"
frame_progress = 0.30930862

[node name="SFX" type="Node" parent="."]

[node name="smash_sound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("9_0uh1f")
volume_db = -4.391

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
